tests/error/final_inherit.gw
#! [contains] inherit from final parent
class final C {}

class D extends C {}
